# boots.dev-build-a-static-site-generator

./: .gitignore  README.md  build.sh  format.sh  main.sh  pyproject.toml  test.sh
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
src/: htmlnode.py  leafnode.py  main.py  parentnode.py  test_htmlnode.py  test_leafnode.py  test_parentNode.py  test_textNodeToHtmlNode.py  test_textnode.py  textNodeToHtmlNode.py  textnode.py
src/nodes/: blocktype.py  htmlnode.py  leafnode.py  parentnode.py  test_htmlnode.py  test_leafnode.py  test_parentNode.py  test_textnode.py  textnode.py  texttype.py
src/utils/: block_to_block_type.py  extract_markdown_images.py  extract_markdown_links.py  extract_title.py  markdown_to_blocks.py  markdown_to_html_node.py  split_nodes_code_block.py  split_nodes_delimiter.py  split_nodes_image.py  split_nodes_link.py  test_block_to_block_type.py  test_extract_markdown_images.py  test_extract_markdown_links.py  test_extract_title.py  test_markdown_to_blocks.py  test_markdown_to_html_node.py  test_split_nodes_code_block.py  test_split_nodes_delimiter.py  test_split_nodes_image.py  test_split_nodes_link.py  test_text_node_to_html_node.py  test_text_to_textnodes.py  text_node_to_html_node.py  text_to_textnodes.py
